# vdom-rs

./: Cargo.toml  README.md  rustfmt.toml
examples/todo/: Cargo.toml
examples/todo/src/: lib.rs
src/: callback.rs  diff.rs  dom.rs  event.rs  lib.rs  node.rs  path.rs  widget.rs
vdom/: Cargo.toml
vdom/src/: comp.rs  driver.rs  lib.rs  node.rs  path.rs
vdom/src/vdom/: attr.rs  mod.rs  node.rs  path.rs
vdom/src/vdom/node/: comp.rs  mod.rs  tag.rs  text.rs
vdom_macro/: Cargo.toml
vdom_macro/src/: code_gen.rs  lib.rs  parser.rs
vdom_web/: Cargo.toml
vdom_web/src/: driver.rs  lib.rs
