[package]
name = "vdom_web"
version = "0.0.0"
authors = ["Thomas Heck <t@b128.net>"]
edition = "2018"

[dependencies]
vdom = {path = "../vdom"}
wasm-bindgen = "0.2.27"

[dependencies.web-sys]
version = "0.3.2"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
    "CharacterData",
    "NodeList",
]
