[package]
name = "todo"
version = "0.0.0"
authors = ["Thomas Heck <t@b128.net>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
vdom = {path = "../../vdom"}
vdom_macro = {path = "../../vdom_macro"}
vdom_web = {path = "../../vdom_web"}
wasm-bindgen = "0.2.25"

[dependencies.web-sys]
version = "0.3.2"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
    "console",
]
